# math_concepts_cxx

./: CMakeLists.txt
inc/: fields.hpp  groups.hpp  operators.hpp  point_set.hpp  vectorspaces.hpp
scripts/: setup_eigen.sh
src/: main.cc
